syntax = "proto3";

option csharp_namespace = "ApiGateway.Grpc";

package HomeApp;

import "Protos/location.proto";

message Device{
    int32 id = 1;
    string name = 2;
    optional string zigbee2mqttId = 3;
    optional string ip = 4;
    Location location = 5;
}

message NewDevice{
    string name = 1;
    int32 locationId = 2;
    optional string ip = 3;
}

message ListDevicesRequest {
}

message ListDevicesResponse {
    repeated Device devices = 1;
}

message GetByLocationRequest {
    int32 location_id = 1;
}

message GetByLocationResponse {
    Device device = 1;
}

message CreateDeviceRequest {
    NewDevice new_device = 1;
}

message CreateDeviceResponse {
    Device device = 1;
}

service DeviceService {
    rpc List (ListDevicesRequest) returns (ListDevicesResponse) {}
    rpc GetByLocation (GetByLocationRequest) returns (GetByLocationResponse) {}
    rpc CreateDevice (CreateDeviceRequest) returns (CreateDeviceResponse) {}
}
